<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/title_calendar"
            android:textSize="@dimen/font_20"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_24"
            android:layout_marginTop="@dimen/space_16"
            android:text="@string/label_month"
            android:textSize="@dimen/font_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvYear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginRight="@dimen/space_16"
            android:text="@string/label_year"
            android:textSize="@dimen/font_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvMonth"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <Spinner
            android:id="@+id/spMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginTop="@dimen/space_12"
            app:layout_constraintEnd_toStartOf="@+id/spYear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMonth" />

        <Spinner
            android:id="@+id/spYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_12"
            android:layout_marginTop="@dimen/space_12"
            android:layout_marginRight="@dimen/space_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spMonth"
            app:layout_constraintTop_toBottomOf="@+id/tvMonth" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/spYear"
            app:spanCount="7"
            tools:listitem="@layout/row_day" />

        <View
            android:id="@+id/vBorder"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/space_20"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/rvDays" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="@dimen/space_150"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginTop="@dimen/space_20"
            android:background="@drawable/bg_search_date"
            android:hint="@string/hint_date"
            android:inputType="date"
            android:maxLength="10"
            android:padding="@dimen/space_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vBorder" />

        <android.widget.Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_40"
            android:layout_marginLeft="@dimen/space_16"
            android:background="@color/purple_700"
            android:text="@string/btn_search"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/etDate"
            app:layout_constraintStart_toEndOf="@+id/etDate"
            app:layout_constraintTop_toTopOf="@+id/etDate" />

        <android.widget.Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_40"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginTop="@dimen/space_12"
            android:text="@string/btn_clear"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@+id/etDate"
            app:layout_constraintTop_toBottomOf="@+id/etDate" />

        <android.widget.Button
            android:id="@+id/btnWeek"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_40"
            android:layout_marginLeft="@dimen/space_16"
            android:layout_marginTop="@dimen/space_12"
            android:background="@color/teal_700"
            android:text="@string/btn_week"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/etDate"
            app:layout_constraintTop_toBottomOf="@+id/btnClear" />

        <TextView
            android:id="@+id/tvWeek"
            android:layout_margin="@dimen/space_16"
            app:layout_constraintTop_toBottomOf="@+id/btnWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>